--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "building-a-server-project",
+  "name": "image_processing",
   "version": "1.0.0",
-  "description": "Image processing Api",
-  "main": "index.js",
+  "description": "Image Processing Api",
+  "main": "index.ts",
   "scripts": {
     "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write",
     "lint": "eslint --config .eslintrc \"src/**/*.ts\"",
@@ -12,13 +12,13 @@
     "start": "nodemon src/index.ts",
     "startjs": "npm run build && node build/."
   },
-  "repository": "git+https://github.com/Daniel-Henderson-Master20/building-a-server-project.git",
-  "author": "Dan the Dev",
+  "repository": "https://github.com/miguelbj/imageProcessor",
+  "author": "Miguel Johnson",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Daniel-Henderson-Master20/building-a-server-project/issues"
+    
   },
-  "homepage": "https://github.com/Daniel-Henderson-Master20/building-a-server-project#readme",
+  "homepage": "https://github.com/miguelbj/imageProcessor",
   "devDependencies": {
     "@jimp/types": "^0.16.1",
     "@types/express": "^4.17.13",
